5737 mr_sas driver does not pass SCSI mode sense to disks when adapter in JBOD mode. 5738 mr_sas driver - poor performance when Invader adapter in JBOD mode. Reviewed by: Hans Rosenfeld <hans.rosenfeld@nexenta.com> Reviewed by: Garrett D'Amore <garrett@damore.org> Approved by: Dan McDonald <danmcd@omniti.com>